Fix spacing and make 2 columns

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -151,9 +151,11 @@ ul {
    /*list-style:none;*/
     font-size: 200%;
     margin-left: 0%;
+    text-decoration: none;
 }
 li {
     margin-bottom: 5px;
+    text-decoration: none;
 }
 
 .PDFjs{
@@ -370,5 +372,12 @@ margin-bottom: 100px;
     border-radius: 8px;
     padding: 30px;
     margin-right: 10%;
+    border-spacing: 100px;
+    column-count: 2;
+    
 }
+
+.box:hover {
+    transform: scale(1.01);
+  }
 
